
[TestNoUnsafeAssignmentRule/invalid-0 - 1]
Diagnostic 1: anyAssignment (1:7 - 1:18)
Message: Unsafe assignment of an any value.
   1 | const x = 1 as any;
     |       ~~~~~~~~~~~~
---

[TestNoUnsafeAssignmentRule/invalid-1 - 1]
Diagnostic 1: anyAssignment (2:7 - 2:18)
Message: Unsafe assignment of an any value.
   1 | 
   2 | const x = 1 as any,
     |       ~~~~~~~~~~~~
   3 |   y = 1;
---

[TestNoUnsafeAssignmentRule/invalid-2 - 1]
Diagnostic 1: anyAssignment (1:14 - 1:25)
Message: Unsafe assignment of an any value.
   1 | function foo(a = 1 as any) {}
     |              ~~~~~~~~~~~~
---

[TestNoUnsafeAssignmentRule/invalid-3 - 1]
Diagnostic 1: anyAssignment (3:15 - 3:34)
Message: Unsafe assignment of an any value.
   2 | class Foo {
   3 |   constructor(private a = 1 as any) {}
     |               ~~~~~~~~~~~~~~~~~~~~
   4 | }
---

[TestNoUnsafeAssignmentRule/invalid-4 - 1]
Diagnostic 1: anyAssignment (3:3 - 3:23)
Message: Unsafe assignment of an any value.
   2 | class Foo {
   3 |   private a = 1 as any;
     |   ~~~~~~~~~~~~~~~~~~~~~
   4 | }
---

[TestNoUnsafeAssignmentRule/invalid-5 - 1]
Diagnostic 1: anyAssignment (3:3 - 3:24)
Message: Unsafe assignment of an any value.
   2 | class Foo {
   3 |   accessor a = 1 as any;
     |   ~~~~~~~~~~~~~~~~~~~~~~
   4 | }
---

[TestNoUnsafeAssignmentRule/invalid-6 - 1]
Diagnostic 1: anyAssignment (2:7 - 2:18)
Message: Unsafe assignment of an error typed value.
   1 | 
   2 | const [x] = spooky;
     |       ~~~~~~~~~~~~
   3 |       
---

[TestNoUnsafeAssignmentRule/invalid-7 - 1]
Diagnostic 1: unsafeArrayPatternFromTuple (2:8 - 2:12)
Message: Unsafe array destructuring of a tuple element with an error typed value.
   1 | 
   2 | const [[[x]]] = [spooky];
     |        ~~~~~
   3 |       
---

[TestNoUnsafeAssignmentRule/invalid-8 - 1]
Diagnostic 1: unsafeArrayPatternFromTuple (3:6 - 3:13)
Message: Unsafe array destructuring of a tuple element with an error typed value.
   2 | const {
   3 |   x: { y: z },
     |      ~~~~~~~~
   4 | } = { x: spooky };

Diagnostic 2: anyAssignment (4:7 - 4:15)
Message: Unsafe assignment of an error typed value.
   3 |   x: { y: z },
   4 | } = { x: spooky };
     |       ~~~~~~~~~
   5 |       
---

[TestNoUnsafeAssignmentRule/invalid-9 - 1]
Diagnostic 1: anyAssignment (4:1 - 4:14)
Message: Unsafe assignment of an error typed value.
   3 | 
   4 | value = spooky;
     | ~~~~~~~~~~~~~~
   5 |       
---

[TestNoUnsafeAssignmentRule/invalid-10 - 1]
Diagnostic 1: anyAssignment (2:7 - 2:20)
Message: Unsafe assignment of an any value.
   1 | 
   2 | const [x] = 1 as any;
     |       ~~~~~~~~~~~~~~
   3 |       
---

[TestNoUnsafeAssignmentRule/invalid-11 - 1]
Diagnostic 1: unsafeArrayPattern (2:7 - 2:9)
Message: Unsafe array destructuring of an any array value.
   1 | 
   2 | const [x] = [] as any[];
     |       ~~~
   3 |       
---

[TestNoUnsafeAssignmentRule/invalid-12 - 1]
Diagnostic 1: unsafeAssignment (1:7 - 1:37)
Message: Unsafe assignment of type Set<any> to a variable of type Set<string>.
   1 | const x: Set<string> = new Set<any>();
     |       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
---

[TestNoUnsafeAssignmentRule/invalid-13 - 1]
Diagnostic 1: unsafeAssignment (1:7 - 1:53)
Message: Unsafe assignment of type Map<string, any> to a variable of type Map<string, string>.
   1 | const x: Map<string, string> = new Map<string, any>();
     |       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
---

[TestNoUnsafeAssignmentRule/invalid-14 - 1]
Diagnostic 1: unsafeAssignment (1:7 - 1:41)
Message: Unsafe assignment of type Set<any[]> to a variable of type Set<string[]>.
   1 | const x: Set<string[]> = new Set<any[]>();
     |       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
---

[TestNoUnsafeAssignmentRule/invalid-15 - 1]
Diagnostic 1: unsafeAssignment (1:7 - 1:57)
Message: Unsafe assignment of type Set<Set<Set<any>>> to a variable of type Set<Set<Set<string>>>.
   1 | const x: Set<Set<Set<string>>> = new Set<Set<Set<any>>>();
     |       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
---

[TestNoUnsafeAssignmentRule/invalid-16 - 1]
Diagnostic 1: unsafeArrayPatternFromTuple (1:8 - 1:8)
Message: Unsafe array destructuring of a tuple element with an any value.
   1 | const [x] = [1] as [any]
     |        ~
---

[TestNoUnsafeAssignmentRule/invalid-17 - 1]
Diagnostic 1: unsafeArrayPatternFromTuple (1:15 - 1:15)
Message: Unsafe array destructuring of a tuple element with an any value.
   1 | function foo([x] = [1] as [any]) {}
     |               ~
---

[TestNoUnsafeAssignmentRule/invalid-18 - 1]
Diagnostic 1: unsafeArrayPatternFromTuple (1:3 - 1:3)
Message: Unsafe array destructuring of a tuple element with an any value.
   1 | ([x] = [1] as [any])
     |   ~
---

[TestNoUnsafeAssignmentRule/invalid-19 - 1]
Diagnostic 1: unsafeArrayPatternFromTuple (1:11 - 1:11)
Message: Unsafe array destructuring of a tuple element with an any value.
   1 | const [[[[x]]]] = [[[[1 as any]]]]
     |           ~
---

[TestNoUnsafeAssignmentRule/invalid-20 - 1]
Diagnostic 1: unsafeArrayPatternFromTuple (1:18 - 1:18)
Message: Unsafe array destructuring of a tuple element with an any value.
   1 | function foo([[[[x]]]] = [[[[1 as any]]]]) {}
     |                  ~
---

[TestNoUnsafeAssignmentRule/invalid-21 - 1]
Diagnostic 1: unsafeArrayPatternFromTuple (1:6 - 1:6)
Message: Unsafe array destructuring of a tuple element with an any value.
   1 | ([[[[x]]]] = [[[[1 as any]]]])
     |      ~
---

[TestNoUnsafeAssignmentRule/invalid-22 - 1]
Diagnostic 1: unsafeArrayPatternFromTuple (1:8 - 1:14)
Message: Unsafe array destructuring of a tuple element with an any value.
   1 | const [[[[x]]]] = [1 as any]
     |        ~~~~~~~
---

[TestNoUnsafeAssignmentRule/invalid-23 - 1]
Diagnostic 1: unsafeArrayPatternFromTuple (1:15 - 1:21)
Message: Unsafe array destructuring of a tuple element with an any value.
   1 | function foo([[[[x]]]] = [1 as any]) {}
     |               ~~~~~~~
---

[TestNoUnsafeAssignmentRule/invalid-24 - 1]
Diagnostic 1: unsafeArrayPatternFromTuple (1:9 - 1:9)
Message: Unsafe array destructuring of a tuple element with an any value.
   1 | const [{x}] = [{x: 1}] as [{x: any}]
     |         ~
---

[TestNoUnsafeAssignmentRule/invalid-25 - 1]
Diagnostic 1: unsafeArrayPatternFromTuple (1:16 - 1:16)
Message: Unsafe array destructuring of a tuple element with an any value.
   1 | function foo([{x}] = [{x: 1}] as [{x: any}]) {}
     |                ~
---

[TestNoUnsafeAssignmentRule/invalid-26 - 1]
Diagnostic 1: unsafeArrayPatternFromTuple (1:4 - 1:4)
Message: Unsafe array destructuring of a tuple element with an any value.
   1 | ([{x}] = [{x: 1}] as [{x: any}])
     |    ~
---

[TestNoUnsafeAssignmentRule/invalid-27 - 1]
Diagnostic 1: unsafeArrayPatternFromTuple (1:16 - 1:16)
Message: Unsafe array destructuring of a tuple element with an any value.
   1 | const [{['x']: x}] = [{['x']: 1}] as [{['x']: any}]
     |                ~
---

[TestNoUnsafeAssignmentRule/invalid-28 - 1]
Diagnostic 1: unsafeArrayPatternFromTuple (1:23 - 1:23)
Message: Unsafe array destructuring of a tuple element with an any value.
   1 | function foo([{['x']: x}] = [{['x']: 1}] as [{['x']: any}]) {}
     |                       ~
---

[TestNoUnsafeAssignmentRule/invalid-29 - 1]
Diagnostic 1: unsafeArrayPatternFromTuple (1:11 - 1:11)
Message: Unsafe array destructuring of a tuple element with an any value.
   1 | ([{['x']: x}] = [{['x']: 1}] as [{['x']: any}])
     |           ~
---

[TestNoUnsafeAssignmentRule/invalid-30 - 1]
Diagnostic 1: unsafeArrayPatternFromTuple (1:16 - 1:16)
Message: Unsafe array destructuring of a tuple element with an any value.
   1 | const [{[`x`]: x}] = [{[`x`]: 1}] as [{[`x`]: any}]
     |                ~
---

[TestNoUnsafeAssignmentRule/invalid-31 - 1]
Diagnostic 1: unsafeArrayPatternFromTuple (1:23 - 1:23)
Message: Unsafe array destructuring of a tuple element with an any value.
   1 | function foo([{[`x`]: x}] = [{[`x`]: 1}] as [{[`x`]: any}]) {}
     |                       ~
---

[TestNoUnsafeAssignmentRule/invalid-32 - 1]
Diagnostic 1: unsafeArrayPatternFromTuple (1:11 - 1:11)
Message: Unsafe array destructuring of a tuple element with an any value.
   1 | ([{[`x`]: x}] = [{[`x`]: 1}] as [{[`x`]: any}])
     |           ~
---

[TestNoUnsafeAssignmentRule/invalid-33 - 1]
Diagnostic 1: unsafeAssignment (1:1 - 1:22)
Message: Unsafe assignment of type [any] to a variable of type [[[[any]]]].
   1 | [[[[x]]]] = [1 as any];
     | ~~~~~~~~~~~~~~~~~~~~~~
---

[TestNoUnsafeAssignmentRule/invalid-34 - 1]
Diagnostic 1: unsafeArraySpread (2:12 - 2:24)
Message: Unsafe spread of an any value in an array.
   1 | 
   2 | const x = [...(1 as any)];
     |            ~~~~~~~~~~~~~
   3 |       
---

[TestNoUnsafeAssignmentRule/invalid-35 - 1]
Diagnostic 1: unsafeArraySpread (2:12 - 2:27)
Message: Unsafe spread of an any value in an array.
   1 | 
   2 | const x = [...([] as any[])];
     |            ~~~~~~~~~~~~~~~~
   3 |       
---

[TestNoUnsafeAssignmentRule/invalid-36 - 1]
Diagnostic 1: unsafeArrayPatternFromTuple (1:8 - 1:8)
Message: Unsafe array destructuring of a tuple element with an any value.
   1 | const {x} = {x: 1} as {x: any}
     |        ~
---

[TestNoUnsafeAssignmentRule/invalid-37 - 1]
Diagnostic 1: unsafeArrayPatternFromTuple (1:15 - 1:15)
Message: Unsafe array destructuring of a tuple element with an any value.
   1 | function foo({x} = {x: 1} as {x: any}) {}
     |               ~
---

[TestNoUnsafeAssignmentRule/invalid-38 - 1]
Diagnostic 1: unsafeArrayPatternFromTuple (1:3 - 1:3)
Message: Unsafe array destructuring of a tuple element with an any value.
   1 | ({x} = {x: 1} as {x: any})
     |   ~
---

[TestNoUnsafeAssignmentRule/invalid-39 - 1]
Diagnostic 1: unsafeArrayPatternFromTuple (1:11 - 1:11)
Message: Unsafe array destructuring of a tuple element with an any value.
   1 | const {x: y} = {x: 1} as {x: any}
     |           ~
---

[TestNoUnsafeAssignmentRule/invalid-40 - 1]
Diagnostic 1: unsafeArrayPatternFromTuple (1:18 - 1:18)
Message: Unsafe array destructuring of a tuple element with an any value.
   1 | function foo({x: y} = {x: 1} as {x: any}) {}
     |                  ~
---

[TestNoUnsafeAssignmentRule/invalid-41 - 1]
Diagnostic 1: unsafeArrayPatternFromTuple (1:6 - 1:6)
Message: Unsafe array destructuring of a tuple element with an any value.
   1 | ({x: y} = {x: 1} as {x: any})
     |      ~
---

[TestNoUnsafeAssignmentRule/invalid-42 - 1]
Diagnostic 1: unsafeArrayPatternFromTuple (1:12 - 1:12)
Message: Unsafe array destructuring of a tuple element with an any value.
   1 | const {x: {y}} = {x: {y: 1}} as {x: {y: any}}
     |            ~
---

[TestNoUnsafeAssignmentRule/invalid-43 - 1]
Diagnostic 1: unsafeArrayPatternFromTuple (1:19 - 1:19)
Message: Unsafe array destructuring of a tuple element with an any value.
   1 | function foo({x: {y}} = {x: {y: 1}} as {x: {y: any}}) {}
     |                   ~
---

[TestNoUnsafeAssignmentRule/invalid-44 - 1]
Diagnostic 1: unsafeArrayPatternFromTuple (1:7 - 1:7)
Message: Unsafe array destructuring of a tuple element with an any value.
   1 | ({x: {y}} = {x: {y: 1}} as {x: {y: any}})
     |       ~
---

[TestNoUnsafeAssignmentRule/invalid-45 - 1]
Diagnostic 1: unsafeArrayPatternFromTuple (1:12 - 1:12)
Message: Unsafe array destructuring of a tuple element with an any value.
   1 | const {x: [y]} = {x: {y: 1}} as {x: [any]}
     |            ~
---

[TestNoUnsafeAssignmentRule/invalid-46 - 1]
Diagnostic 1: unsafeArrayPatternFromTuple (1:19 - 1:19)
Message: Unsafe array destructuring of a tuple element with an any value.
   1 | function foo({x: [y]} = {x: {y: 1}} as {x: [any]}) {}
     |                   ~
---

[TestNoUnsafeAssignmentRule/invalid-47 - 1]
Diagnostic 1: unsafeArrayPatternFromTuple (1:7 - 1:7)
Message: Unsafe array destructuring of a tuple element with an any value.
   1 | ({x: [y]} = {x: {y: 1}} as {x: [any]})
     |       ~
---

[TestNoUnsafeAssignmentRule/invalid-48 - 1]
Diagnostic 1: anyAssignment (1:13 - 1:23)
Message: Unsafe assignment of an any value.
   1 | const x = { y: 1 as any };
     |             ~~~~~~~~~~~
---

[TestNoUnsafeAssignmentRule/invalid-49 - 1]
Diagnostic 1: anyAssignment (1:18 - 1:28)
Message: Unsafe assignment of an any value.
   1 | const x = { y: { z: 1 as any } };
     |                  ~~~~~~~~~~~
---

[TestNoUnsafeAssignmentRule/invalid-50 - 1]
Diagnostic 1: unsafeAssignment (1:43 - 1:69)
Message: Unsafe assignment of type Set<Set<Set<any>>> to a variable of type Set<Set<Set<string>>>.
   1 | const x: { y: Set<Set<Set<string>>> } = { y: new Set<Set<Set<any>>>() };
     |                                           ~~~~~~~~~~~~~~~~~~~~~~~~~~~
---

[TestNoUnsafeAssignmentRule/invalid-51 - 1]
Diagnostic 1: anyAssignment (1:7 - 1:27)
Message: Unsafe assignment of an any value.
   1 | const x = { ...(1 as any) };
     |       ~~~~~~~~~~~~~~~~~~~~~
---

[TestNoUnsafeAssignmentRule/invalid-52 - 1]
Diagnostic 1: anyAssignment (4:9 - 4:16)
Message: Unsafe assignment of an any value.
   3 | declare function Foo(props: Props): never;
   4 | <Foo a={1 as any} />;
     |         ~~~~~~~~
   5 |       
---

[TestNoUnsafeAssignmentRule/invalid-53 - 1]
Diagnostic 1: anyAssignmentThis (3:9 - 3:18)
Message: Unsafe assignment of an any value. `this` is typed as `any`.

Help: You can try to fix this by turning on the `noImplicitThis` compiler option, or adding a `this` parameter to the function.
   2 | function foo() {
   3 |   const bar = this;
     |         ~~~~~~~~~~
   4 | }
---

[TestNoUnsafeAssignmentRule/invalid-54 - 1]
Diagnostic 1: anyAssignment (3:7 - 3:37)
Message: Unsafe assignment of an any value.
   2 | type T = [string, T[]];
   3 | const test: T = ['string', []] as any;
     |       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   4 |       
---

[TestNoUnsafeAssignmentRule/invalid-55 - 1]
Diagnostic 1: anyAssignment (4:20 - 4:22)
Message: Unsafe assignment of an any value.
   3 | const bar: any = 1;
   4 | const foo: Foo = { bar };
     |                    ~~~
   5 |       
---

[TestNoUnsafeAssignmentRule/invalid-56 - 1]
Diagnostic 1: anyAssignment (9:5 - 9:53)
Message: Unsafe assignment of an any value.
   8 |   constructor(
   9 |     private readonly param: Bar = Object.create(null)
     |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  10 |   ) {}
---

[TestNoUnsafeAssignmentRule/invalid-57 - 1]
Diagnostic 1: anyAssignment (4:1 - 4:23)
Message: Unsafe assignment of an any value.
   3 | 
   4 | foo = { bar: 2 } as any;
     | ~~~~~~~~~~~~~~~~~~~~~~~
   5 |       
---
